--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:build": "tsc -w",
-    "start:run": "nodemon dist/server.js",
+    "start:run": "node dist/server.js",
     "start": "concurrently npm:start:*"
   },
   "author": "",
@@ -31,7 +31,6 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mssql": "^10.0.1",
-    "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
   }
 }
